--- a/BashShop/BashShop.csproj
+++ b/BashShop/BashShop.csproj
@@ -6,4 +6,21 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="img\logo.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="img\logo.jpg">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="2.15.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.15.0" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.15.0" />
+    <PackageReference Include="MongoDB.Driver.GridFS" Version="2.15.0" />
+  </ItemGroup>
+
 </Project>
